agregado de traducciones y campo requerido en formulario producto