@@ -3,6 +3,6 @@ package com.elpudu.productos.catalogo.domain;
 public class ConfigConstants {
 	
 	public static final int MAX_IMAGE_UPLOAD = 5;
-	public static final Integer MAX_ORDER = new Integer(99);
+	public static final Integer MAX_ORDER = Integer.valueOf(99);
 
 }
